refactoring text alignment issues

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -24,7 +24,7 @@
 .fontIcon {
     margin-top:45px;
     /* padding-right: 5px; */
-    margin-left: 170px;
+    margin-left: 163px;
     color: white;
     font-size: 3rem;
     /* text-align: center; */
@@ -32,20 +32,20 @@
 
 .emhead {
     margin-top: 20px;
-    margin-left: 195px;
+    margin-left: 210px;
     color: black;
 }
 
 .ctchead {
     margin-top: 20px;
-    margin-left:150px;
+    margin-left:170px;
     color: black;
     text-decoration: none;
 }
 
 .gthead {
     margin-top: 20px;
-    margin-left: 185px;   
+    margin-left: 200px;   
     color: black;
     text-decoration: none;
 }
